<resources>
    <string name="app_name">NavigationDrawerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">HOME</string>
    <string name="browser">BROWSER</string>
    <string name="music">MUSIC</string>
    <string name="account">ACCOUNT</string>
    <string name="settings">SETTINGS</string>
    <string name="web_hint">Enter website address</string>
    <string name="visit">GO</string>
    <string name="updates">Auto Update</string>
    <string name="security">FingerPrint Authentication</string>
    <string name="notification">Notification</string>
    <string name="see">message</string>
    <string name="username">Email@xchangi.com</string>
    <string name="img_description">profile picture</string>

</resources>
