<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/baseline_web"
            android:title="@string/browser"
            />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/baseline_music"
            android:title="@string/music"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_account"
            android:title="@string/account"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/baseline_settings"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
