<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMilk"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/button_group"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/browser_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browser"
            style="@style/button_theme"
            android:layout_marginBottom="2dp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="87dp"/>

        <Button
            android:id="@+id/music_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music"
            style="@style/button_theme"
            android:layout_marginBottom="2dp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="166dp"/>

        <Button
            android:id="@+id/account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            style="@style/button_theme"
            android:layout_marginBottom="2dp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="238dp"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            style="@style/button_theme"
            android:layout_marginBottom="2dp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="323dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>