<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorMilk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowserActivity">

    <LinearLayout
        android:id="@+id/addressLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/web_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/web_hint"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="106dp"/>

        <Button
            android:id="@+id/go_button"
            style="@style/button_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit"
            />

    </LinearLayout>

    <Button
        android:id="@+id/flag_button"
        style="@style/button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/browser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressLinearLayout"/>

</android.support.constraint.ConstraintLayout>